syntax = "proto3";

package user;

service UserService {
  rpc FindById(FindByIdRequest) returns (UserProto) {}
  rpc FindByUsername (FindByUsernameRequest) returns (UserProto) {}
  rpc Create (CreateUserRequest) returns (UserProto) {}
  rpc Follow (FollowRequest) returns (UserProto) {}
  rpc Block (BlockRequest) returns (UserProto) {}
  rpc Unblock (BlockRequest) returns (UserProto) {}
  rpc AllBlockedUsers (Empty) returns (UsersProto) {}
  rpc AllBlockedByUsers (Empty) returns (UsersProto) {}
  rpc Update (UpdateUserRequest) returns (UserProto) {}
  rpc AddEducations (EducationUpdateList) returns (EducationUpdateList) {}
  rpc RemoveEducations (EducationUpdateList) returns (EducationUpdateList) {}
  rpc AddExperiences (ExperienceUpdateList) returns (ExperienceUpdateList) {}
  rpc RemoveExperiences (ExperienceUpdateList) returns (ExperienceUpdateList) {}
  rpc AddSkills (SkillUpdateList) returns (SkillUpdateList) {}
  rpc RemoveSkills (SkillUpdateList) returns (SkillUpdateList) {}
  rpc AddInterests (InterestUpdateList) returns (InterestUpdateList) {}
  rpc RemoveInterests (InterestUpdateList) returns (InterestUpdateList) {}
}

message Empty {}


message FindByIdRequest {
  string id = 1;
}

message FindByUsernameRequest {
  string username = 1;
}

message FollowRequest {
  string username = 1;
}

message BlockRequest {
  string username = 1;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string bio = 4;
  string image = 5;
  string phoneNumber = 6;
  string birthday = 7;
  Gender gender = 8;
  bool privateProfile = 13;
}

message UserProto {
  string id = 1;
  string email = 2;
  string username = 3;
  string bio = 4;
  string image = 5;
  string password = 6;
  string phoneNumber = 7;
  string birthday = 8;
  Gender gender = 9;
  bool privateProfile = 14;
}

message UsersProto {
  repeated UserProto users = 1;
}

message UpdateUserRequest {
  string id = 1;
  string email = 2;
  string username = 3;
  string bio = 4;
  string image = 5;
  string password = 6;
  string phoneNumber = 7;
  string birthday = 8;
  Gender gender = 9;
  bool privateProfile = 14;
}

enum Gender{
  MALE = 0;
  FEMALE = 1;
}

message ExperienceProto {
  string id = 1;
  string position = 2;
  string company = 3;
  string description = 4;
  string startDate = 5;
  string endDate = 6;
}

message WorkedProto {
  string id = 1;
  string position = 2;
  string description = 3;
  string startDate = 4;
  string endDate = 5;
}

message ExperienceUpdateList {
  repeated ExperienceProto experiences = 1;
}

message EducationProto {
  string id = 1;
  string institution = 2;
  string description = 3;
  string startDate = 4;
  string endDate = 5;
}

message AttendedProto {
  string id = 1;
  string description = 2;
  string startDate = 3;
  string endDate = 4;
}

message EducationUpdateList {
  repeated EducationProto educations = 1;
}

message SkillProto {
  string id = 1;
  string name = 2;
}

message SkillUpdateList {
  repeated SkillProto skills = 1;
}

message InterestProto {
  string id = 1;
  string name = 2;
}

message InterestUpdateList {
  repeated InterestProto interests = 1;
}